--- a/arch/arm/configs/rk_defconfig
+++ b/arch/arm/configs/rk_defconfig
@@ -648,6 +648,7 @@ CONFIG_SUSPEND_TIME=y
 # CONFIG_PM_SYNC_BEFORE_SUSPEND is not set
 # CONFIG_QUICK_WAKEUP is not set
 # CONFIG_SUSPEND_DEBUG is not set
+CONFIG_BOEFFLA_WL_BLOCKER=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 CONFIG_ARM_CPU_SUSPEND=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
@@ -1858,6 +1859,7 @@ CONFIG_TOUCHSCREEN_GEN_VKEYS=y
 # CONFIG_TOUCHSCREEN_MAXIM_STI is not set
 # CONFIG_TOUCHSCREEN_HIMAX_CHIPSET is not set
 CONFIG_TOUCHSCREEN_NT36xxx=y
+CONFIG_WAKE_GESTURES=y
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ARIZONA_HAPTICS is not set
